--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Task Board</title>
 	<!-- v. 1.0.3 Test Auto-Deploy -->
 
+	<meta name="keywords" content="Sticky Note,Task,To-Do,Task Board">
+	<meta name="description" content="A Sticky Note App with Grouping and Auto-Sorting">
+	<meta name="author" content="LevenTech">
+	
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -13,8 +16,7 @@
 	
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
